commit per la brancaEstructura num1

--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
     <link rel="stylesheet" href="css/estils.css">
 </head>
 <body>
-    <h1>test</h1>
+    <section id="titol"> Activitats</section>
+    <section id="cos"> 
+
+        <article>
+            <img src="img/uno.jpg">
+            <h2>text one</h2>
+          </article>
+          <article>
+            <img src="img/dos.jpg">
+            <h2>text two</h2>
+          </article>
+          <article>
+            <img src="img/tres.jpg">
+            <h2>text three</h2>
+          </article>
+          <article>
+            <img src="img/quatro.jpg">
+            <h2>text four</h2>
+          </article>
+
+    </section>
+    <section id="peu"> Informació de contacte</section>
 </body>
 </html>
