--- a/index.html
+++ b/index.html
@@ -7,27 +7,54 @@
     <link rel="stylesheet" href="css/estils.css">
 </head>
 <body>
-    <section id="titol"> Activitats</section>
-    <section id="cos"> 
+    <div class="titol">
 
-        <article>
-            <img src="img/uno.jpg">
-            <h2>text one</h2>
-          </article>
-          <article>
-            <img src="img/dos.jpg">
-            <h2>text two</h2>
-          </article>
-          <article>
-            <img src="img/tres.jpg">
-            <h2>text three</h2>
-          </article>
-          <article>
-            <img src="img/quatro.jpg">
-            <h2>text four</h2>
-          </article>
+        <h1>Activitats</h1>
 
-    </section>
-    <section id="peu"> Informació de contacte</section>
+    </div>
+
+    <div class="cos">
+
+        <div class="article">
+
+        	<img src="img/uno.jpg"/>
+
+        	<p>bonic llac num1</p>
+
+    	</div>
+
+    	<div class="article">
+
+        	<img src="img/dos.jpg"/>
+
+        	<p>bonic llac num2</p>
+
+    	</div>
+
+    	<div class="article">
+
+        	<img src="img/tres.jpg"/>
+
+        	<p>bonic llac num2</p>
+
+    	</div>
+
+    	<div class="article">
+
+        	<img src="img/quatro.jpg"/>
+
+        	<p>bonic llac num3</p>
+
+    	</div>
+
+    </div>
+
+    <div class="footer">
+
+        <h4>Jashan</h4>
+		<a href="mailto:navjashan.singh@cirvianum.cat">navjashan.singh@cirvianum.cat</a>
+
+    </div>
+
 </body>
 </html>
