--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="cos">
 
-        <div class="article">
+        <div class="artículos">
 
         	<img src="img/uno.jpg"/>
 
@@ -23,7 +23,7 @@
 
     	</div>
 
-    	<div class="article">
+    	<div class="artículos">
 
         	<img src="img/dos.jpg"/>
 
@@ -31,7 +31,7 @@
 
     	</div>
 
-    	<div class="article">
+    	<div class="artículos">
 
         	<img src="img/tres.jpg"/>
 
@@ -39,7 +39,7 @@
 
     	</div>
 
-    	<div class="article">
+    	<div class="artículos">
 
         	<img src="img/quatro.jpg"/>
 
